--- a/packages/css/styles.css
+++ b/packages/css/styles.css
@@ -7,7 +7,8 @@
 
   /*========== Colors ==========*/
   /* Change favorite color */
-  --hue-color: 190; /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
+  --hue-color: 190;
+  /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
 
   /* HSL color mode */
   --first-color: hsl(var(--hue-color), 69%, 61%);
@@ -230,6 +231,7 @@ img {
   grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
 }
+
 .nav__link {
   display: flex;
   flex-direction: column;
@@ -308,7 +310,7 @@ img {
 }
 
 .home__blob-img {
-  width: 220px;
+  width: 200px;
 }
 
 .home__data {
@@ -357,6 +359,7 @@ img {
 .home__scroll-arrow {
   font-size: 1.25rem;
 }
+
 /*==================== BUTTONS ====================*/
 
 .button {
@@ -411,10 +414,11 @@ img {
 /*==================== ABOUT ====================*/
 .about__img {
   width: 200px;
-  border-radius: 0.5rem;
+  border-radius: 10px;
   justify-self: center;
   align-items: center;
 }
+
 
 .about__description {
   text-align: center;
@@ -516,52 +520,52 @@ img {
   background-color: var(--first-color);
 }
 
-.skills__html {
+.skills__php {
   width: 90%;
 }
 
-.skills__css {
-  width: 80%;
-}
-
-.skills__js {
-  width: 60%;
-}
-
-.skills__wordpress {
-  width: 70%;
-}
-
-.skills__python {
-  width: 60%;
-}
-
-.skills__tab {
-  width: 70%;
+.skills__java {
+  width: 85%;
 }
 
 .skills__sql {
-  width: 50%;
-}
-
-.skills__google {
-  width: 70%;
-}
-
-.skills__bank {
   width: 80%;
 }
 
-.skills__google {
-  width: 70%;
+.skills__api {
+  width: 75%;
 }
 
-.skills__counter {
-  width: 80%;
-}
-
-.skills__office {
+.skills__figma {
   width: 90%;
+}
+
+.skills__photoshop {
+  width: 90%;
+}
+
+.skills__xd {
+  width: 85%;
+}
+
+.skills__sketch {
+  width: 80%;
+}
+
+.skills__laravel {
+  width: 85%;
+}
+
+.skills__html {
+  width: 80%;
+}
+
+.skills__react {
+  width: 75%;
+}
+
+.skills__css {
+  width: 75%;
 }
 
 .skills__close .skills__list {
@@ -678,7 +682,7 @@ img {
 }
 
 .services__title {
-  font-size: var(--h3-font-size);
+  font-size: var(--h4-font-size);
   margin-bottom: var(--mb-1);
   font-weight: var(--font-medium);
 }
@@ -796,7 +800,7 @@ img {
   right: -0.5rem;
 }
 
-.swiper-container-horizontal > .swiper-pagination-bullets {
+.swiper-container-horizontal>.swiper-pagination-bullets {
   bottom: -2.5rem;
 }
 
@@ -809,6 +813,7 @@ img {
 .swiper-pagination-bullet {
   outline: none;
 }
+
 /*==================== PROJECT IN MIND ====================*/
 .project {
   text-align: center;
@@ -1068,6 +1073,7 @@ img {
   .skills__title {
     font-size: var(--normal-font-size);
   }
+
   .qualification__data {
     gap: 0.5rem;
   }
@@ -1080,6 +1086,7 @@ img {
   .services__content {
     padding-right: 3.5rem;
   }
+
   .services__modal {
     padding: 0 0.5rem;
   }
@@ -1114,6 +1121,7 @@ img {
   .home__data {
     grid-column: initial;
   }
+
   .home__img {
     order: 1;
     justify-self: center;
@@ -1143,12 +1151,15 @@ img {
     .body {
       margin: 0;
     }
+
     .section {
       padding: 6rem 0 2rem;
     }
+
     .section__subtitle {
       margin-bottom: 4rem;
     }
+
     .header {
       top: 0;
       bottom: initial;
@@ -1164,6 +1175,7 @@ img {
       height: calc(var(--header-height) + 1.5rem);
       column-gap: 1rem;
     }
+
     .nav__icon,
     .nav__close,
     .nav__toggle {
@@ -1178,6 +1190,7 @@ img {
     .nav__menu {
       margin-left: auto;
     }
+
     .change-theme {
       margin: 0;
     }
@@ -1190,33 +1203,43 @@ img {
       padding-top: 5.5rem;
       column-gap: 2rem;
     }
+
     .home__blob {
       width: 270px;
     }
+
     .home__scroll {
       display: block;
     }
+
     .home__scroll-button {
       margin-left: 3rem;
     }
+
     .about__container {
       column-gap: 5rem;
     }
+
     .about__img {
       width: 350px;
     }
+
     .about__description {
       text-align: initial;
     }
+
     .about__info {
       justify-content: space-between;
     }
+
     .about__buttons {
       justify-content: initial;
     }
+
     .qualification__tabs {
       justify-content: center;
     }
+
     .qualification__button {
       margin: 0 var(--mb-1);
     }
@@ -1224,13 +1247,16 @@ img {
     .qualification__sections {
       grid-template-columns: 0.5fr;
     }
+
     .services__container {
       grid-template-columns: repeat(3, 218px);
       justify-content: center;
     }
+
     .services__icon {
       font-size: 2rem;
     }
+
     .services__content {
       padding: 6rem 0 2rem 2.5rem;
     }
@@ -1238,18 +1264,23 @@ img {
     .services__modal-content {
       width: 450px;
     }
+
     .portfolio__img {
       width: 320px;
     }
+
     .portfolio__content {
       align-items: center;
     }
+
     .project {
       text-align: initial;
     }
+
     .project__bg {
       background: none;
     }
+
     .project__container {
       background-color: var(--first-color-second);
       border-radius: 1rem;
@@ -1257,12 +1288,15 @@ img {
       grid-template-columns: 1fr max-content;
       column-gap: 3rem;
     }
+
     .project__data {
       padding-top: 0.8rem;
     }
+
     .footer__container {
       grid-template-columns: repeat(3, 1fr);
     }
+
     .footer__bg {
       padding: 3rem 0 3.5rem;
     }
@@ -1271,9 +1305,11 @@ img {
       flex-direction: row;
       column-gap: 2rem;
     }
+
     .footer__socials {
       justify-self: flex-end;
     }
+
     .footer__copy {
       margin-top: 4.5rem;
     }
@@ -1291,15 +1327,19 @@ img {
   .footer__container {
     padding: 0;
   }
+
   .home__blob {
-    width: 320px;
+    width: 330px;
   }
+
   .home__social {
     transform: translateX(-6rem);
   }
+
   .services__container {
     grid-template-columns: repeat(3, 238px);
   }
+
   .portfolio__content {
     column-gap: 5rem;
   }
@@ -1311,19 +1351,23 @@ img {
   .swiper-portfolio-icon {
     font-size: 3.5rem;
   }
+
   .swiper-button-prev {
     left: -3.5rem;
   }
+
   .swiper-button-next {
     right: -3.5rem;
   }
-  .swiper-container-horizontal > .swiper-pagination-bullets {
+
+  .swiper-container-horizontal>.swiper-pagination-bullets {
     bottom: -4.5rem;
   }
 
   .contact__form {
     width: 460px;
   }
+
   .contact__inputs {
     grid-template-columns: repeat(2, 1fr);
   }
